adds a element to layout

--- a/src/views/layout/index.html
+++ b/src/views/layout/index.html
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
+    <h1>Hapi-auth-cookie Workshop</h1>
     {{{content}}}
+    <a href='/secret'>Logged in users, click here</a>
   </body>
 </html>
