--- a/src/views/layout/index.html
+++ b/src/views/layout/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Hapi-auth-cookie Workshop</h1>
     {{{content}}}
-    <a href='/secret'>Logged in users, click here</a>
+    <a href='/auth-only'>Logged in users, click here</a>
   </body>
 </html>
