removes solution code from master

--- a/src/views/user-page.html
+++ b/src/views/user-page.html
@@ -1,13 +1,12 @@
-<h2>Welcome you are now logged in!</h2>
-
-  <ol>
-    <li>
-      Open up your dev tools.
-    </li>
-    <li>
-      Navigate to application > storage > cookies.
-    </li>
-    <li>
-      You should see your cookie information here!
-    </li>
-  </ol>
+<h2>Check if your cookie has been set!</h2>
+<ol>
+  <li>
+    Open up your dev tools.
+  </li>
+  <li>
+    Navigate to application > storage > cookies.
+  </li>
+  <li>
+    You should see your cookie information here!
+  </li>
+</ol>
