--- a/src/views/user-page.html
+++ b/src/views/user-page.html
@@ -1,12 +1,6 @@
 <h2>Check if your cookie has been set!</h2>
 <ol>
-  <li>
-    Open up your dev tools.
-  </li>
-  <li>
-    Navigate to application > storage > cookies.
-  </li>
-  <li>
-    You should see your cookie information here!
-  </li>
+  <li>Open up your dev tools.</li>
+  <li>Navigate to application > storage > cookies.</li>
+  <li>You should see your cookie information here!</li>
 </ol>
